Fixed scrollbar

--- a/src/styles.scss
+++ b/src/styles.scss
@@ -7,13 +7,11 @@
 
 ::-webkit-scrollbar
 {
-  width: 10px;
+  width: 8px;
   background-color: transparent;
 }
 
 ::-webkit-scrollbar-thumb
 {
-  border-radius: 5px;
-  -webkit-box-shadow: inset 0 0 6px rgba(0,0,0,.3);
   background-color: #3f51b5;
 }
